support_tools/swigwin-3.0.12/Examples/test-suite/errors/pp_missing_enddef.i
%module xxx

%define FOO
int x;



